--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,38 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+
+# dependencies
+/web/node_modules
+/web/.pnp
+/web/.pnp.js
+
+# testing
+/web/coverage
+
+# next.js
+/web/.next/
+/web/out/
+
+# production
+/web/build
+
+# misc
+/web/.DS_Store
+/web/*.pem
+
+# debug
+/web/npm-debug.log*
+/web/yarn-debug.log*
+/web/yarn-error.log*
+
+# local env files
+/web/.env.local
+/web/.env.development.local
+/web/.env.test.local
+/web/.env.production.local
+
+# vercel
+/web/.vercel
