--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_ROOT_HOST: '%'
     ports:
-      - 33060:3306
+      - ${FILEBOX_BBDD_PORT:-3306}:3306
  
     expose:
       - 33060
