--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "body-parser": "1.19.1",
     "cors": "2.8.5",
     "crypto": "1.0.1",
@@ -19,6 +20,7 @@
     "express": "4.17.2",
     "fs": "0.0.1-security",
     "multer": "1.4.4",
+    "mysql": "2.18.1",
     "nodemon": "2.0.15",
     "sharp": "0.29.3"
   }
