--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.6",
+    "redux": "4.1.2"
   },
   "devDependencies": {
     "eslint": "8.8.0",
