--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "multer": "1.4.4",
     "mysql": "2.18.1",
     "nodemon": "2.0.15",
-    "sharp": "0.29.3"
+    "sharp": "0.29.3",
+    "uuid": "8.3.2",
+    "walk": "2.3.15"
   }
 }
