--- a/docker.env
+++ b/docker.env
@@ -1,3 +1,3 @@
-FILEBOX_DIR='D:\Mega\docker_memory\bbdd'
+FILEBOX_DIR='D:\Mega\docker_memory\bbdd2'
 FILEBOX_WEB_PORT=3000
 SERVER_URL=192.168.18.121
